--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <script>Hello World</script>
-    <script>console.log("Season 1")</script>
+
+    <script>console.log("Season 1");</script>
+
+    <script src="script.js"></script>
 </body>
 </html>
