I corrected some placement

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Javascript Episode 01 Season 01</title>
 </head>
 <body>
-    <script>console.log("Season 1");</script>
-
     <script src="script.js"></script>
 
-    <button onclick="alert('This season is going to be weird.')">Free Show</button>
+    <button onclick="alert('Season 1, Episode 1 of Javascript')">Free Show</button>
+    
+    <script>console.log("Season 1");</script>
 </body>
 </html>
