--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="script.js"></script>
 
-    <button onclick="alert('Season 1, Episode 1 of Javascript')">Free Show</button>
+    <button onclick="alert('Season 1, Episode 1 of Javascript');">Free Show</button>
     
     <script>console.log("Season 1");</script>
 </body>
